object-store/1.3/modules/ROOT/pages/object-store-connector-reference.adoc
= Object Store Connector Reference 
:page-aliases: connectors::object-store/object-store-connector-reference.adoc

Object Store Connector v1.3.0

Support Category: Select

+++
Connector that provides functionality to access and create object store instances.
+++


== Configurations
---
[[config]]
=== Config

+++
Default configuration
+++

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<config_connection, Connection>>
| The connection types to provide to this configuration. | | x
| Lock Timeout a| Number |  Timeout for acquiring ObjectStore locks. If not specified, operations wait indefinitely. |  | 
| Lock Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the lock timeout parameter. |  SECONDS | 
|===

==== Connection Types

[[config_connection]]
===== Connection

+++
A ConnectionProvider that returns the Mule runtime's default ObjectStoreManager.
+++

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Reconnection a| <<Reconnection>> |  +++When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy.+++ |  |
|===

== Operations

* <<clear>>
* <<contains>>
* <<remove>>
* <<retrieve>>
* <<retrieveAll>>
* <<retrieveAllKeys>>
* <<store>> 

[[clear]]
=== Clear

`<os:clear>`

Removes all the contents in the store.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Object Store a| One of:

* <<objectStore>>
* <<objectStorev2>>
* <<privateObjectStore>> |  +++A reference to the object store to use. If not defined, the runtime's default partition is used.+++ |  |
|===

==== Output

[%autowidth.spread]
|===
|Type |Void
|===

==== Throws

* OS:STORE_NOT_AVAILABLE


[[contains]]
=== Contains

`<os:contains>`

Checks if there is any value associated to the given key. If no value exists for the key, then false is returned.

This operation is synchronized at the key level. No other operation can access the same key on the same object store while this operation is running. If the runtime is running in cluster mode, this synchronization is also guaranteed across nodes.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Key a| String |  +++The key of the object to be checked.+++ |  | x
| Object Store a| One of:

* <<objectStore>>
* <<objectStorev2>>
* <<privateObjectStore>> |  +++A reference to the object store to use. If not defined, the runtime's default partition is used.+++ |  |
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  |
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable.+++ |  `#[payload]` |
|===

==== Output

[%autowidth.spread]
|===
|Type |Boolean
|===

==== Throws

* OS:INVALID_KEY
* OS:STORE_NOT_AVAILABLE

[[remove]]
=== Remove

`<os:remove>`

Removes the value associated to the given key. If no value exists for the key, then an OS:KEY_NOT_FOUND error is thrown.

This operation is synchronized on the key level. No other operation is able to access the same key on the same object store while this operation is running.

If the runtime is running in cluster mode, this synchronization is also guaranteed across nodes.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Key a| String |  +++The key of the object to be removed.+++ |  | x
| Object Store a| One of:

* <<objectStore>>
* <<objectStorev2>>
* <<privateObjectStore>> |  +++A reference to the object store to use. If not defined, the runtime's default partition will be used.+++ |  |
|===

==== Output

[%autowidth.spread]
|===
|Type |Void
|===

==== Throws

* OS:INVALID_KEY
* OS:STORE_NOT_AVAILABLE
* OS:KEY_NOT_FOUND

[[retrieve]]
=== Retrieve

`<os:retrieve>`

Retrieves the value stored for the given key. If no value exists for the key, behavior depends on the defaultValue parameter.

If the parameter was not provided or was resolved to a null value, then an OS:KEY_NOT_FOUND error is thrown. Otherwise, the defaultValue is returned, but that value is not stored.

Finally, this operation is synchronized on the key level. No other operation can access the same key on the same object store while this operation is running. If the runtime is running in cluster mode, this synchronization is also guaranteed across nodes.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Key a| String |  +++The key of the value to be retrieved.+++ |  | x
| Default Value a| Any |  +++Value to be returned if the key doesn't exist in the store.+++ |  |
| Object Store a| One of:

* <<objectStore>>
* <<objectStorev2>>
* <<privateObjectStore>> |  +++A reference to the object store to use. If not defined, the runtime's default partition is used.+++ |  |
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  |
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable.+++ |  `#[payload]` |
|===

==== Output

[%autowidth.spread]
|===
|Type |Any
|===

==== Throws

* OS:INVALID_KEY
* OS:KEY_NOT_FOUND
* OS:STORE_NOT_AVAILABLE

[[retrieveAll]]
=== Retrieve All

`<os:retrieve-all>`

+++
Retrieves all the key value pairs in the object store.
+++

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Object Store a| One of:

* <<objectStore>>
* <<objectStorev2>>
* <<privateObjectStore>> |  +++A reference to the object store to use. If not defined, the runtime's default partition is used.+++ |  |
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  |
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable.+++ |  `#[payload]` |
|===

==== Output

[%autowidth.spread]
|===
|Type |Object
|===

==== Throws

* OS:STORE_NOT_AVAILABLE

[[retrieveAllKeys]]
=== Retrieve All Keys

`<os:retrieve-all-keys>`

+++
Returns a List containing all keys that the object store currently holds values for.
+++

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Object Store a| One of:

* <<objectStore>>
* <<objectStorev2>>
* <<privateObjectStore>> |  +++A reference to the object store to use. If not defined, the runtime's default partition is used.+++ |  |
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  |
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable.+++ |  `#[payload]` |
|===

==== Output

[%autowidth.spread]
|===
|Type |Array of String
|===

==== Throws

* OS:STORE_NOT_AVAILABLE

[[store]]
=== Store

`<os:store>`

Stores the given value using the given key. This operation can be used either for storing new values or updating existing ones, depending on the value of the failIfPresent. When that parameter is set to `false` (default value), then any pre-existing value associated with that key is overwritten. If the parameter is set to `true`, then an `OS:KEY_ALREADY_EXISTS` error is thrown instead.

Another important consideration is regarding null values. It is not allowed to store a null value. However, a common use case is to obtain a value (most likely by evaluating a expression or transformation), testing the value for not null, storing it if present and doing nothing otherwise. The `failOnNullValue` parameter simplifies this use case. Setting it to `false` makes the connector skip null values, which prevents the need to use a `<choice/>` router to check the condition, while using the default value of `true` makes the connector throw a `NULL_VALUE` error.

Finally, this operation is synchronized on the key level. No other operation can access the same key on the same object store while this operation is running. If the runtime is running in cluster mode, this synchronization is also guaranteed across nodes.

Running the same application with store operations across multiple nodes without clustering enabled might lead to inconsistent results due to the absence of coordinated locking.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Key a| String |  +++The key of the value to be stored.+++ |  | x
| Value a| Any a|  The value to be stored. Should not be null if `failOnNullValue` is set to true. a|  `#[payload]` |
| Fail If Present a| Boolean |  +++Whether to fail or update the pre-existing value if the key already exists on the store.+++ |  +++false+++ |
| Fail On Null Value a| Boolean |  +++Whether to fail or skip the operation if the value is null.+++ |  +++true+++ |
| Object Store a| One of:

* <<objectStore>>
* <<objectStorev2>>
* <<privateObjectStore>> |  +++A reference to the object store to use. If not defined, the runtime's default partition is used.+++ |  |
|===

==== Output

[%autowidth.spread]
|===
|Type |Void
|===

==== Throws

* OS:INVALID_KEY
* OS:KEY_ALREADY_EXISTS
* OS:KEY_NOT_FOUND
* OS:NULL_VALUE
* OS:STORE_NOT_AVAILABLE

== Types

[[Reconnection]]
=== Reconnection

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| Count a| Number | How many reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===


[[objectStore]]
=== Object Store

NOTE: These settings do not apply to xref:object-store::index.adoc[Object Store v2].

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Persistent a| Boolean | Whether the store is persistent or transient. | true |
| Max entries a| Number | The max number of entries allowed. Exceeding entries are removed when the expiration thread runs. If absent, then the described object store has no size boundaries. |  |
| Entry ttl a| Number | The entry timeout. If absent, then the described object store has no time boundaries. If `entryTtl` is set to a value lower than or equal to zero, then the object store never expires. |  |
| Entry ttl unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS a| An entry's time to live (`#entryTtl`). | SECONDS |
| Expiration interval a| Number a| How frequently the expiration thread should run. The default value is 1 minute.

The `expirationInterval` field requires that the `maxEntries` or `entryTtl` fields also be set. If neither is set, then putting a value in `Expiration Interval` has no effect and the expiration thread does not run.
If `expirationInterval` is set to a value lower than or equal to zero, then the object store never expires. | 1 |
| Expiration interval unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS a| The expiration interval (`#expirationInterval`). | MINUTES |
| Configuration Reference a| <<ObjectStoreConnector>> a| A reference to an `os:config` element used to declare this object store.

If not provided, the Mule runtime's default ObjectStoreManager is used. Setting this parameter is necessary only when you want to use a nondefault object store implementation: for example, if you want to have a store that is backed by Redis or JDBC. |  |
|===



[[objectStorev2]]
=== Object Store (Object Store v2)


NOTE: These settings apply only to xref:object-store::index.adoc[Object Store v2].


[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Persistent a| Boolean | Whether the store is persistent or transient. | true |
| Max entries a| | *Not configurable for Object Store v2*.

The maximum number of entries is unlimited.|  |
| Entry ttl a| Number a| The entry timeout.

Ignored if the value of `expirationInterval` is less than or equal to `0`.

* Minimum value: 1 second
* Maximum value: 30 days

Object Store v2 supports two TTL behaviors:

* *Rolling TTL*: Each entry access (read or write) extends the expiration timer. This behavior applies only when you omit `entryTtl` from the configuration (Mule 4.2.1 and later). Entries persist as long as the application accesses them at least once a week.
* *Static TTL*: The system fixes the expiration timer at the moment of the write operation. Reads don't extend this timer. The system evicts the entry at `creation_time + entryTtl`.

If the field contains:

* No value
+
** Mule versions 4.2.1 and later: Rolling TTL
** Mule versions earlier than 4.2.1: Static TTL of 30 days by default

* Less than or equal to `0`
+
TTL is static and set to the maximum value (2592000 seconds/30 days). Reads do not extend the entry's lifetime.
* Positive number
+
TTL is static and set to the specified value (between 1 and 2592000 seconds)
* Greater than 30 days
+
TTL is static and set to the maximum value (2592000 seconds/30 days).

IMPORTANT: Specifying any `entryTtl` value, including `0`, configures the store with static TTL. To use rolling TTL, omit the `entryTtl` field entirely. Adding `entryTtl="0"` to a configuration that previously omitted the field changes the eviction behavior from rolling to static (30 days from entry creation, regardless of read activity).

For information about the rolling and static TTL behavior, see
xref:object-store::index.adoc#time-to-live[Time to Live (TTL)].
| 2592000 seconds (30 days)  |
| Entry ttl unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS a| The unit for the entry's time to live (`entryTtl`). | SECONDS |
| Expiration interval a| Positive number a| How frequently the expiration thread runs.

The `expirationInterval` field requires that the `entryTtl` field is set; otherwise, it is ignored.

* If `expirationInterval` is set to a positive value less than the value of `entryTtl`, the entry expires based on the `entryTtl` configuration.
* If `expirationInterval` is set to a value less than or equal to zero, `entryTtl` is ignored.

| 1 minute |
| Expiration interval unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS a| The expiration interval (`expirationInterval`). | MINUTES |
| Configuration Reference a| <<ObjectStoreConnector>> a| A reference to an `os:config` element used to declare this object store.

If not provided, the Mule runtime's default ObjectStoreManager is used. Setting this parameter is necessary only when you want to use a nondefault object store implementation: for example, if you want to have a store that is backed by Redis or JDBC. |  |
|===



[[ObjectStoreConnector]]
=== Object Store Connector

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Config Name a| String |  |  |
| Lock Timeout a| Number |  Timeout for acquiring ObjectStore locks. If not specified, operations wait indefinitely. |  | 
| Lock Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the lock timeout parameter. |  SECONDS | 
|===

[[privateObjectStore]]
=== Private Object Store

NOTE: These settings do not apply to xref:object-store::index.adoc[Object Store v2].

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Alias a| String | A friendly name to refer to this store in the management user interface. Provide this alias if you would like it to be easier to identify this store. If not provided, Mule auto generates an ID. Use an alias for consistent OAuth token refresh behavior. Without an alias, each Mule app node creates its own partition. This can lead to issues with OAuth token refresh, as each node might try to refresh the token independently.

By providing an alias, you make sure that the Mule app uses the same partition across restarts. As long as the cached key or value is not expired, the caching scope is hit, and the Mule app continues to use the same token. This prevents unnecessary token refreshes and improves application efficiency. |  |
| Persistent a| Boolean | Whether the store is persistent or transient. | true |
| Max entries a| Number | The maximum number of entries allowed. Exceeding entries are removed when the expiration thread runs. If absent, then the described object store has no size boundaries. |  |
| Entry ttl a| Number | The entry timeout. If absent, then the described object store has no time boundaries. |  |
| Entry ttl unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS a| An entry's time to live (`#entryTtl`). | SECONDS |
| Expiration interval a| Number | How frequently the expiration thread should run. The default value is 1 minute.

The `expirationInterval` field requires that the `maxEntries` or `entryTtl` fields also be set. If neither is set, then putting a value in `expirationInterval` has no effect and the expiration thread does not run. If `expirationInterval` is set to a value lower than or equal to zero, then the object store never expires. | 1 |
| Expiration interval unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS a| The expiration interval (`#expirationInterval`). | MINUTES |
| Configuration Reference a| <<ObjectStoreConnector>> a| A reference to an `os:config` element which is used to declare this object store.

If not provided, the Mule runtime's default ObjectStoreManager is used. Setting this parameter is necessary only when you want to use a nondefault object store implementation: for example, if you want to have a store that is backed by Redis or JDBC. |  |
|===

== See Also

* https://help.salesforce.com[Salesforce Help]
